--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/list_books.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/list_books.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Books in Library</title>
+    <meta charset="UTF-8">
+    <title>Book List</title>
 </head>
 <body>
-    <h1>Books in {{ library.name }}</h1>
+    <h1>All Books</h1>
     <ul>
         {% for book in books %}
-            <li>{{ book.title }} by {{ book.author.name }}</li>
+            <li>
+                <strong>{{ book.title }}</strong><br>
+                Author: {{ book.author.name }}<br>
+                Library: {{ book.library.name }}
+            </li>
         {% empty %}
-            <li>No books found in this library.</li>
+            <li>No books found.</li>
         {% endfor %}
     </ul>
 </body>
